--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.6.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
@@ -5,6 +6,7 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+bitsandbytes==0.45.5
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
@@ -57,6 +59,7 @@ pandas==2.2.3
 pillow==11.2.1
 propcache==0.3.1
 protobuf==6.30.2
+psutil==7.0.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyarrow==20.0.0
@@ -79,6 +82,7 @@ safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==4.1.0
+sentencepiece==0.2.0
 setuptools==80.3.0
 six==1.17.0
 smmap==5.0.2
